[gd_scene load_steps=13 format=3 uid="uid://ci5h4qfpbnha0"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_j8xq1"]
[ext_resource type="Texture2D" uid="uid://c5hqnvyjcu2il" path="res://scenes/player/climb_spritesheet.png" id="1_retg3"]
[ext_resource type="Script" path="res://scenes/player/crack_box.gd" id="3_ykeij"]
[ext_resource type="AudioStream" uid="uid://5e1pujqg74o7" path="res://scenes/player/vgdeathsound.ogg" id="4_c11c7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nbkoj"]
atlas = ExtResource("1_retg3")
region = Rect2(0, 146, 123, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a8i7"]
atlas = ExtResource("1_retg3")
region = Rect2(0, 219, 123, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_muesg"]
atlas = ExtResource("1_retg3")
region = Rect2(0, 292, 123, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_788si"]
atlas = ExtResource("1_retg3")
region = Rect2(0, 73, 123, 73)

[sub_resource type="SpriteFrames" id="SpriteFrames_2toij"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbkoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a8i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muesg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_788si")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4k5oc"]
radius = 26.1539
height = 95.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qc6lm"]
radius = 27.2115

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ovcaa"]
radius = 20.0
height = 95.3846

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.65, 0.65)
collision_layer = 2
motion_mode = 1
script = ExtResource("1_j8xq1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2toij")
animation = &"move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(11.25, -3.19744e-14)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4k5oc")

[node name="CrackBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8
script = ExtResource("3_ykeij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrackBox"]
z_index = 2
position = Vector2(31.25, 0)
shape = SubResource("CircleShape2D_qc6lm")
debug_color = Color(1, 1, 1, 0.419608)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(10.7692, 1.59162e-12)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_ovcaa")
debug_color = Color(0.242203, 0.627771, 0.307589, 0.42)

[node name="LivesLabel" type="Label" parent="."]
offset_left = 53.8462
offset_top = -23.0769
offset_right = 99.8462
offset_bottom = 21.9231
rotation = 1.59176
theme_override_font_sizes/font_size = 32
text = "I I I"
horizontal_alignment = 1

[node name="HitAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_c11c7")
volume_db = -10.0
